footer array align issue solved

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -13,7 +13,7 @@
         height: 100%;
         display: flex;
         justify-content: flex-end;
-        align-items: center;
+        align-items: flex-end;
         margin: 0 auto;
         .array{
             width: 100%;
